Sneha/Shruthi | #986 | 1. Switching to PostgreSQL from MySql. 2. Added maven ant plugin to setup the reports database. 3. Added foreign key constraints for dimensions in measures tables. 4. Changed all primary keys to Long.