@@ -25,9 +25,9 @@
             <version>3.1.2.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.9</version>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -120,6 +120,36 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <target name="init">
+                        <echo message="init db" />
+                        <exec executable="dropdb">
+                            <arg line="-U postgres bahmnireportsdata" />
+                        </exec>
+                        <exec executable="createdb">
+                            <arg line="-U postgres bahmnireportsdata" />
+                        </exec>
+                        <echo message="Setting up schema" />
+                        <exec executable="psql">
+                            <arg line="-U postgres" />
+                            <arg line="-d bahmnireportsdata" />
+                            <arg line="-f ${project.basedir}//src/main/resources/db/setup/setup.sql" />
+                        </exec>
+                    </target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.googlecode.flyway</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>2.1</version>
@@ -133,9 +163,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <url>jdbc:mysql://localhost:3306/bahmnireportsdata</url>
-                    <driver>com.mysql.jdbc.Driver</driver>
-                    <user>root</user>
+                    <url>jdbc:postgresql://localhost:5432/bahmnireportsdata</url>
+                    <driver>org.postgresql.Driver</driver>
+                    <user>postgres</user>
                     <password>password</password>
                     <schemas>
                         <schema>bahmnireportsdata</schema>
@@ -157,7 +187,6 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <argLine>-XX:MaxPermSize=256M</argLine>
                             <perCoreThreadCount>false</perCoreThreadCount>
                             <includes>
                                 <include>**//*IT.java</include>
@@ -174,10 +203,10 @@
                 <configuration>
                     <descriptor>benerator/ben.xml</descriptor>
                     <encoding>iso-8859-1</encoding>
-                    <dbDriver>com.mysql.jdbc.Driver</dbDriver>
-                    <dbUrl>jdbc:mysql://localhost:3306/bahmnireportsdata</dbUrl>
+                    <dbDriver>org.postgresql.Driver</dbDriver>
+                    <dbUrl>jdbc:postgresql://localhost:5432/bahmnireportsdata</dbUrl>
                     <dbSchema>bahmnireportsdata</dbSchema>
-                    <dbUser>root</dbUser>
+                    <dbUser>postgres</dbUser>
                     <dbPassword>password</dbPassword>
                 </configuration>
             </plugin>
